--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-name: Your New Jekyll Site
+name: Alerta
 pygments: true
+tracking_id: UA-44829146-1
+repository: https://github.com/guardian/alerta
