--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 name: alerta
+safe: true
+lsi: false
+pygments: true
+tracking_id: UA-44829146-1
 markdown: redcarpet
 redcarpet:
   extensions: ["tables"]
