--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -36,11 +36,11 @@
 - title: Deploy using Docker.
   text: >
     The <strong>alerta-web</strong> docker container has been
-    downloaded 200 thousand times because it's one of the most
+    downloaded more than 2 million times because it's one of the most
     reliable ways to get going quickly. Easy to configure, it can
     be used in simple and complex environments.
   button:
-    text: Docker Deploy
+    text: Docker Deploy »
     url: https://hub.docker.com/r/alerta/alerta-web/
 
 - title: Explore the Alerta API.
